--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".RegisterActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/NoBarTheme"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/NoBarTheme">
         </activity>
         <activity android:name=".DashboardActivity"/>
         <activity android:name=".ConfigurazionePrimoAccessoActivity"></activity>
