Ultimi cambiamenti animazioni

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.eklesia.eklesia">
+          package="io.eklesia.eklesia">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -20,27 +20,30 @@
             android:name=".AuthActivity"
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/NoBarTheme" />
+            android:theme="@style/NoBarTheme"/>
         <activity
             android:name=".RegisterActivity"
-            android:theme="@style/NoBarTheme" />
+            android:theme="@style/NoBarTheme"/>
         <activity
             android:name=".DashboardActivity"
-            android:theme="@style/LightBarTheme" />
-        <activity android:name=".ConfigurazionePrimoAccessoActivity" />
+            android:theme="@style/LightBarTheme"/>
+        <activity android:name=".ConfigurazionePrimoAccessoActivity"/>
         <activity
             android:name=".RegisterActivity2"
-            android:theme="@style/NoBarTheme" />
+            android:theme="@style/NoBarTheme"/>
         <activity
             android:name=".ProfiloActivity"
-            android:theme="@style/NoBarTheme"></activity>
+            android:theme="@style/NoBarTheme"/>
+        <activity android:name=".ChiesaActivity"
+                  android:theme="@style/NoBarTheme">
+        </activity>
     </application>
 
 </manifest>
