--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.4.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    compile 'com.allattentionhere:fabulousfilter:0.0.4'
 
 }
