--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,10 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
     compile 'com.allattentionhere:fabulousfilter:0.0.4'
+    compile('com.google.android:flexbox:0.3.2') {
+        exclude group: 'com.android.support'
+    }
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
+    compile 'com.google.android.gms:play-services-places:11.0.0'
 
 }
