--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -46,12 +47,13 @@
         <activity
             android:name=".ChiesaActivity"
             android:theme="@style/NoBarTheme"/>
-        <activity
-            android:name=".RicercaActivity"
-            android:theme="@style/NoBarTheme"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDd1SK_JBlGSel1jx2Jc19cnwVrddhqp3Y" />
+            android:value="AIzaSyDd1SK_JBlGSel1jx2Jc19cnwVrddhqp3Y"/>
+
+        <activity android:name=".ricerca.RicercaActivity">
+        </activity>
     </application>
 
 </manifest>
